fix: [200~Перенесена валидация в gateway, обновлены обработчики ошибок, все тесты пройдены